language/move-lang/tests/move_check/translated_ir_tests/signer/invalid_move_to_sender.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/invalid_move_to_sender.move:3:9 ───
   │
 3 │         move_to<signer>(s1, move s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to.
   ·
 3 │         move_to<signer>(s1, move s)
   │                 ------ Expected a nominal resource. Found the type: 'signer'
   │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/invalid_move_to_sender.move:10:9 ───
    │
 10 │         move_to<R>(s1, move s);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '1'
    ·
  9 │     fun t(s1: &signer, s: signer) {
    │                           ------ The type: 'signer'
    ·
 10 │         move_to<R>(s1, move s);
    │                 - Is not compatible with: '0x8675309::N::R'
    │

