language/move-lang/tests/move_check/translated_ir_tests/signer/invalid_move_to_sender.move
module M {
    fun t(s1: &signer, s: signer) {
        move_to<signer>(s1, move s)
    }
}

module N {
    resource struct R { s: signer }
    fun t(s1: &signer, s: signer) {
        move_to<R>(s1, move s);
    }
}
